escape/index.css
body {
  padding: 10px 40px;
  font-family: "Javanese Text", "Open Sans";
  color: #432412;
}

h2, p {
  margin: 0
}
.red {
  color:red;
}

#timer {
  position: absolute;
}

#logo {
  display: block;
  margin: auto;
  margin-bottom: 20px;
}

#game {
  position: relative;
  width: 100%;
  justify-content: center;
  display: flex;
  height: 480px;
}

#inspect {
  flex: 1;
}

.inspection {
  display: none;
}

#default.inspection {
  display: block;
}

#scene {
  flex: none;
  position: relative;
  width: 640px;
}

.image {
  display: inline-block;
  width: 100%;
}

.interactable {
  cursor: pointer;
  background-size: contain;
  background-repeat: no-repeat;
  position: absolute;
}

#scene-contents {
  position: relative;
  height: 100%;
  background-image: url("bg.png");
  background-repeat: no-repeat;
}

#scene_door {
  background-image: url("door.png");
  top: 123px;
  left: 213px;
  height: 185px;
  width: 67px;
}

#scene_desk {
  background-image: url("door.png");
  bottom: 0;
  right: 0;
  height: 150px;
  width: 143px;
}

#scene_table {
  background-image: url("door.png");
  top: 70px;
  right: 110px;
  height: 137px;
  width: 215px;
}

#scene_pillow {
  background-image: url("door.png");
  bottom: 0;
  right: 163px;
  height: 77px;
  width: 279px;
}

#scene_computerA {
  top: 213px;
  left: 84px;
  height: 107px;
  width: 108px;
}

#scene_computerB {
  bottom: 30px;
  left: 0;
  height: 127px;
  width: 75px;
}

#scene_toulouse {
  top: 80px;
  left: 40px;
  height: 91px;
  width: 50px;
}
#scene_rouen {
  top: 115px;
  right: 36px;
  height: 148px;
  width: 59px;
}
#scene_lyon {
  top: 268px;
  left: 300px;
  height: 64px;
  width: 121px;
}

